# airlock-tools

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  cleanup.md  pyproject.toml  recurring_tasks.md
.cortex/skills/airlock/: SKILL.md
.cortex/skills/airlock-tooling-maintenance/: SKILL.md
.cortex/skills/airlock-tooling-maintenance/examples/: api-drift-review.md
.cortex/skills/airlock-tooling-maintenance/references/: snowflake-cli-airlock.md
.cortex/skills/airlock/examples/: draft-spec-from-template.md  submit-file-with-attachment.md  triage-expectation-work.md
.cortex/skills/airlock/references/: architecture-playbook.md  marketplace-install-and-security.md
.cortex/skills/airlock/templates/: spec-config-minimal.json  spec-config-with-variant-context.json
docs/: agent_delegation.md  airlock-tools.md  airlock_cortex_code_skill_guide.md  design.md  development.md  mcp_ai_agents_airlock_procedures.md  quickstart-cortex.md  quickstart-mcp.md  reference_benchmarks.md  release_process.md
src/airlock_mcp/: __init__.py  config.py  normalize.py  server.py  snowflake_client.py
tests/: test_normalize.py  test_server_safety.py  test_snowflake_client.py
