[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airlock-mcp"
version = "0.1.0"
description = "MCP server for Airlock's Snowflake stored procedure API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.0",
  "snowflake-connector-python>=3.10",
]
authors = [
  { name = "Reunion Studio" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.8",
]

[project.scripts]
airlock-mcp = "airlock_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/airlock_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
